tests/snapshots/readback_lnet__invalid_op2_op2.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/invalid_op2_op2.bend
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Encountered an invalid numeric operation. (3 occurrences)

λa <Invalid>
