tests/snapshots/readback_lnet__invalid_op2_op2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/invalid_op2_op2.hvm
---
Readback Warning:
Invalid Op2 with 2 occurrences

λa (+ (+ <Invalid> 1) (1 <Invalid>))
