tests/snapshots/readback_lnet__match.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/match.bend
---
switch a = 1 { 0: λb b; _: a-1; }
