tests/snapshots/readback_lnet__nested_let.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/nested_let.bend
---
3
