tests/snapshots/readback_lnet__nested_let.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/nested_let.hvm
---
3
