tests/snapshots/readback_lnet__nested_tup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/nested_tup.bend
---
{{1 2} {4 {3 5}}}
