tests/snapshots/readback_lnet__simple_tup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/simple_tup.bend
---
{0 42}
