tests/snapshots/readback_lnet__tup_add.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_lnet/tup_add.bend
---
[4m[1m[33mWarnings:[0m
[1mDuring readback:[0m
  Encountered an invalid numeric operation.

<Invalid>
